# CapInvest

./: .gitignore  README.md  docker-compose.yml
assets/: capybara.ai
trade-wara/: .gitignore  Cargo.toml  README.md  rustfmt.toml
trade-wara/src/: lib.rs  main.rs  order_book.rs
trade-wara/src/dto/: mod.rs  order_dto.rs  transaction_dto.rs
trade-wara/src/entities/: asset.rs  investor.rs  mod.rs  order.rs  transaction.rs
