[package]
name = "trade-wara"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.26"
rdkafka = { version = "0.25", features = ["cmake-build"] }
serde = "1.0.183"
serde_json = "1.0.104"
uuid = { version = "1.4.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
